--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -52,6 +52,14 @@
       "title": "Accordion",
       "description": "Вертикально сложенный набор интерактивных заголовков, каждый из которых раскрывает раздел контента."
     },
+    "alert": {
+      "title": "Alert",
+      "description": "Компоненты уведомлений для отображения важной информации пользователю с различными стилями и вариантами."
+    },
+    "alertDialog": {
+      "title": "Alert Dialog",
+      "description": "Модальные диалоги для подтверждения действий и отображения важной информации с различными стилями и вариантами."
+    },
     "basic": {
       "title": "Базовые Компоненты",
       "description": "Основные UI компоненты для уведомлений, диалогов, аватаров, значков и кнопок."
@@ -84,6 +92,10 @@
         "title": "Box Accordion",
         "description": "Аккордеон с контейнерами в стиле коробок для каждого элемента."
       },
+      "contained": {
+        "title": "Contained Accordion",
+        "description": "Аккордеон с контейнерами в стиле коробок для каждого элемента."
+      },
       "boxContained": {
         "title": "Box Contained",
         "description": "Box аккордеон с ограниченным стилем и скругленными углами."
@@ -107,6 +119,18 @@
       "mediaContent": {
         "title": "Медиа контент",
         "description": "Аккордеон с богатым медиа контентом, таким как изображения и видео."
+      },
+      "multiple": {
+        "title": "Множественное раскрытие",
+        "description": "Аккордеон, который позволяет раскрывать несколько элементов одновременно."
+      },
+      "expandIcon": {
+        "title": "Иконка раскрытия",
+        "description": "Аккордеон с пользовательской иконкой раскрытия вместо стандартной стрелки."
+      },
+      "icon": {
+        "title": "С иконками",
+        "description": "Аккордеон с иконками для каждого элемента для лучшей визуальной идентификации."
       }
     },
     "demo": {
@@ -164,6 +188,106 @@
   },
   "tariff": {
     "popular": "Популярный"
+  },
+  "alert": {
+    "title": "Компоненты Alert",
+    "description": "Интерактивные компоненты уведомлений с различными стилями и конфигурациями",
+    "variants": {
+      "primary": {
+        "title": "Основной Alert",
+        "description": "Стандартное уведомление с базовым стилем и функциональностью."
+      },
+      "destructive": {
+        "title": "Деструктивный Alert",
+        "description": "Уведомление об ошибке с красным цветом для критических сообщений."
+      },
+      "success": {
+        "title": "Успешный Alert",
+        "description": "Уведомление об успешном выполнении операции с зеленым цветом."
+      },
+      "warning": {
+        "title": "Предупреждающий Alert",
+        "description": "Уведомление-предупреждение с желтым цветом для важных сообщений."
+      },
+      "info": {
+        "title": "Информационный Alert",
+        "description": "Информационное уведомление с синим цветом для дополнительной информации."
+      },
+      "withBackground": {
+        "title": "Alert с фоном",
+        "description": "Уведомление с фоновым цветом для лучшего визуального выделения."
+      },
+      "soft": {
+        "title": "Мягкий Alert",
+        "description": "Уведомления с мягкими цветами и прозрачным фоном."
+      },
+      "bootstrap": {
+        "title": "Bootstrap стиль",
+        "description": "Уведомления в стиле Bootstrap с границами и фонами."
+      },
+      "callout": {
+        "title": "Callout Alert",
+        "description": "Уведомления в стиле callout с левой границей."
+      },
+      "withActions": {
+        "title": "Alert с действиями",
+        "description": "Уведомления с кнопками действий для интерактивности."
+      }
+    },
+    "usage": {
+      "title": "Использование",
+      "description": "Нажмите на любой вариант выше, чтобы увидеть интерактивные демонстрации, примеры кода и подробную документацию по использованию компонента."
+    }
+  },
+  "alertDialog": {
+    "title": "Компоненты Alert Dialog",
+    "description": "Интерактивные модальные диалоги с различными стилями и конфигурациями",
+    "variants": {
+      "default": {
+        "title": "Стандартный Alert Dialog",
+        "description": "Базовый модальный диалог с подтверждением действия."
+      },
+      "withIcon": {
+        "title": "Alert Dialog с иконкой",
+        "description": "Диалог с иконкой для лучшего визуального восприятия."
+      },
+      "destructive": {
+        "title": "Деструктивный Alert Dialog",
+        "description": "Диалог для критических действий с красным цветом."
+      },
+      "success": {
+        "title": "Успешный Alert Dialog",
+        "description": "Диалог для подтверждения успешных операций с зеленым цветом."
+      },
+      "warning": {
+        "title": "Предупреждающий Alert Dialog",
+        "description": "Диалог-предупреждение с желтым цветом для важных сообщений."
+      },
+      "info": {
+        "title": "Информационный Alert Dialog",
+        "description": "Информационный диалог с синим цветом для дополнительной информации."
+      },
+      "custom": {
+        "title": "Пользовательский Alert Dialog",
+        "description": "Диалог с дополнительными элементами и кастомной структурой."
+      },
+      "form": {
+        "title": "Alert Dialog с формой",
+        "description": "Диалог с полями ввода для сбора данных от пользователя."
+      },
+      "scrollable": {
+        "title": "Прокручиваемый Alert Dialog",
+        "description": "Диалог с прокручиваемым контентом для длинных сообщений."
+      },
+      "animated": {
+        "title": "Анимированный Alert Dialog",
+        "description": "Диалог с анимациями и визуальными эффектами."
+      }
+    },
+    "usage": {
+      "title": "Использование",
+      "description": "Нажмите на любой вариант выше, чтобы увидеть интерактивные демонстрации, примеры кода и подробную документацию по использованию компонента."
+    }
   },
   "basic": {
     "title": "Базовые Компоненты",
@@ -224,5 +348,164 @@
       "title": "Макет и Утилиты",
       "description": "Компоненты макета и утилиты, которые помогают организовать и структурировать интерфейс вашего приложения. Эти компоненты обеспечивают гибкие и адаптивные макеты для различных случаев использования."
     }
+  },
+  "demo": {
+    "accordion": {
+      "items": {
+        "accessible": {
+          "title": "Доступен ли он?",
+          "content": "Да. Он соответствует паттерну дизайна WAI-ARIA."
+        },
+        "styled": {
+          "title": "Стилизован ли он?",
+          "content": "Да. Он поставляется со стилями по умолчанию, которые соответствуют эстетике других компонентов."
+        },
+        "animated": {
+          "title": "Анимирован ли он?",
+          "content": "Да. Он анимирован по умолчанию, но вы можете отключить анимацию, если предпочитаете."
+        }
+      }
+    },
+    "alert": {
+      "items": {
+        "update": {
+          "title": "Доступно обновление",
+          "content": "Новая версия приложения теперь доступна."
+        },
+        "error": {
+          "title": "Что-то пошло не так",
+          "content": "Произошла ошибка при обработке вашего запроса."
+        },
+        "success": {
+          "title": "Операция успешна",
+          "content": "Ваше действие было успешно выполнено"
+        },
+        "warning": {
+          "title": "Действуйте с осторожностью",
+          "content": "Это действие может иметь непредвиденные последствия."
+        },
+        "info": {
+          "title": "Важная информация",
+          "content": "Обязательно ознакомьтесь с последними обновлениями перед продолжением."
+        }
+      }
+    },
+    "alertDialog": {
+      "items": {
+        "default": {
+          "trigger": "Показать диалог",
+          "title": "Вы абсолютно уверены?",
+          "description": "Это действие нельзя отменить. Это навсегда удалит ваш аккаунт и удалит ваши данные с наших серверов.",
+          "cancel": "Отмена",
+          "continue": "Продолжить"
+        },
+        "withIcon": {
+          "trigger": "Показать диалог с иконкой",
+          "title": "Вы абсолютно уверены?",
+          "description": "Это действие нельзя отменить. Это навсегда удалит ваш аккаунт и удалит ваши данные с наших серверов.",
+          "cancel": "Отмена",
+          "continue": "Продолжить"
+        },
+        "destructive": {
+          "trigger": "Удалить аккаунт",
+          "title": "Удалить аккаунт",
+          "description": "Это действие нельзя отменить. Это навсегда удалит ваш аккаунт и удалит ваши данные с наших серверов.",
+          "cancel": "Отмена",
+          "delete": "Удалить"
+        },
+        "success": {
+          "trigger": "Подтвердить операцию",
+          "title": "Операция успешна",
+          "description": "Ваша операция была успешно выполнена. Все изменения сохранены.",
+          "cancel": "Закрыть",
+          "confirm": "Подтвердить"
+        },
+        "warning": {
+          "trigger": "Показать предупреждение",
+          "title": "Внимание!",
+          "description": "Это действие может иметь непредвиденные последствия. Пожалуйста, убедитесь, что вы понимаете, что делаете.",
+          "cancel": "Отмена",
+          "proceed": "Продолжить"
+        },
+        "info": {
+          "trigger": "Показать информацию",
+          "title": "Информация",
+          "description": "Это важная информация, которую вы должны знать перед продолжением.",
+          "cancel": "Закрыть",
+          "learnMore": "Узнать больше"
+        },
+        "custom": {
+          "trigger": "Показать кастомный диалог",
+          "title": "Премиум функции",
+          "description": "Обновитесь до премиум версии, чтобы получить доступ к дополнительным функциям.",
+          "features": "Новые функции:",
+          "feature1": "Неограниченное хранилище",
+          "feature2": "Приоритетная поддержка",
+          "feature3": "Расширенная аналитика",
+          "cancel": "Отмена",
+          "upgrade": "Обновить"
+        },
+        "form": {
+          "trigger": "Открыть форму",
+          "title": "Связаться с нами",
+          "description": "Заполните форму ниже, и мы свяжемся с вами в ближайшее время.",
+          "name": "Имя",
+          "namePlaceholder": "Введите ваше имя",
+          "message": "Сообщение",
+          "messagePlaceholder": "Введите ваше сообщение",
+          "cancel": "Отмена",
+          "submit": "Отправить"
+        },
+        "scrollable": {
+          "trigger": "Показать длинный контент",
+          "title": "Условия использования",
+          "description": "Пожалуйста, ознакомьтесь с нашими условиями использования:",
+          "item": "Пункт {number}: Условие использования",
+          "cancel": "Отклонить",
+          "accept": "Принять"
+        },
+        "animated": {
+          "trigger": "Показать анимированный диалог",
+          "title": "Загрузка...",
+          "description": "Пожалуйста, подождите, пока мы обрабатываем ваш запрос.",
+          "cancel": "Отмена",
+          "confirm": "Подтвердить"
+        }
+      }
+    }
+  },
+  "common": {
+    "search": "Поиск",
+    "searchPlaceholder": "Введите для поиска...",
+    "loading": "Загрузка...",
+    "loadingApplication": "Загрузка приложения",
+    "takingToMainPage": "Переход на главную страницу",
+    "indexingContent": "Индексация контента...",
+    "preparingSearch": "Подготовка поиска...",
+    "navigation": "Навигация",
+    "forward": "Вперед",
+    "sectionNavigation": "Навигация по разделам",
+    "tableOfContents": "Оглавление",
+    "noHeadings": "Нет заголовков",
+    "cancel": "Отмена",
+    "close": "Закрыть",
+    "open": "Открыть",
+    "save": "Сохранить",
+    "delete": "Удалить",
+    "edit": "Редактировать",
+    "back": "Назад",
+    "next": "Далее",
+    "previous": "Предыдущий",
+    "goTo": "Перейти к",
+    "relevance": "Релевантность",
+    "password": "Пароль",
+    "enterPassword": "Введите пароль",
+    "unlockContent": "Разблокировать контент",
+    "verifying": "Проверка...",
+    "theme": "Тема",
+    "light": "Светлая",
+    "dark": "Темная",
+    "sectionOf": "Раздел {current} из {total}",
+    "home": "Главная"
   }
 }
